# B_Spline_Curve_Fitting

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/curve/: BSplineCurve.h  Curve.h  ParaCurve.h
src/curve/base_type/: BoundBox.h  CurvePoint.h  PointTraits.h  Vector3X.h  utility.h
src/curve/io/: CurveIO.h
src/curve/util/: BSplineFunction.h
src/curve/view/: CurveView.h
src/fitting/: BSplineCurveFitting_Base.cpp  BSplineCurveFitting_Base.h  KTPFitting.cpp  KTPFitting.h
src/view/: CentralWidget.cpp  CentralWidget.h  Viewer.cpp  Viewer.h
test/: BSplineCurveTester.cpp  BSplineFunctionTester.cpp  CMakeLists.txt
